--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "canvas": "^3.2.0",
     "clsx": "^2.0.0",
     "country-state-city": "^3.2.1",
+    "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "i18n-iso-countries": "^7.14.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.3",
