--- a/capacitor/package.json
+++ b/capacitor/package.json
@@ -11,7 +11,9 @@
     "open:android": "npx cap open android"
   },
   "dependencies": {
-    "@capacitor/core": "^6.1.0"
+    "@capacitor/core": "^6.1.0",
+    "@capacitor/push-notifications": "^6.0.0",
+    "@capacitor-firebase/messaging": "^6.0.0"
   },
   "devDependencies": {
     "@capacitor/cli": "^6.1.0",
