--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "canvas": "^3.2.0",
     "clsx": "^2.0.0",
     "country-state-city": "^3.2.1",
-    "firebase": "^12.6.0",
+    "firebase": "^11.10.0",
+    "@capacitor/core": "^6.1.0",
+    "@capacitor/push-notifications": "^6.0.0",
+    "@capacitor-firebase/messaging": "^6.0.0",
     "firebase-admin": "^13.6.0",
     "i18n-iso-countries": "^7.14.0",
     "jsonwebtoken": "^9.0.2",
