--- a/capacitor/android/app/build.gradle
+++ b/capacitor/android/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.android.gms:play-services-auth:21.1.1'
+    implementation 'com.facebook.android:facebook-android-sdk:17.0.0'
 }
 
 apply from: 'capacitor.build.gradle'
