--- a/capacitor/android/app/src/main/AndroidManifest.xml
+++ b/capacitor/android/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="default" />
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token"/>
     </application>
 
     <!-- Permissions -->
