--- a/capacitor/ios/App/App/GoogleService-Info.plist
+++ b/capacitor/ios/App/App/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>679781905090-krsti4p4rs17avocq6oheuhuel82h18u.apps.googleusercontent.com</string>
+	<string>679781905090-hkg6fb7to3m0klgl3e90dco9tgd2rinc.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.679781905090-krsti4p4rs17avocq6oheuhuel82h18u</string>
+	<string>com.googleusercontent.apps.679781905090-hkg6fb7to3m0klgl3e90dco9tgd2rinc</string>
 	<key>ANDROID_CLIENT_ID</key>
 	<string>679781905090-mg2jvahauduomckgd69tfers514d745c.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.bagami.app</string>
+	<string>com.bagami.aubin</string>
 	<key>PROJECT_ID</key>
 	<string>bagami-a3974</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:679781905090:ios:ee5bfbba5e6e8bb142c15b</string>
+	<string>1:679781905090:ios:49142d67b95d5a0742c15b</string>
 </dict>
 </plist>
