--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev -p 8080 -H 0.0.0.0",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -H 0.0.0.0",
     "lint": "next lint",
     "seed": "tsx prisma/seed.ts",
     "cron:rating-reminders": "curl http://localhost:3002/api/cron/rating-reminders"
